...
            Section(header: Text("General Settings")) {
                Toggle("Start at Login", isOn: rotationVM.binding(\.startAtLogin))
                Toggle("Show in Dock", isOn: rotationVM.binding(\.showInDock))
                Toggle("Show in Menu Bar", isOn: rotationVM.binding(\.showInMenuBar))
            }
            
            Section(header: Text("Wallpaper Settings")) {
                Picker("Display Mode", selection: rotationVM.binding(\.defaultDisplayMode)) {
                    Text("Fill").tag(DisplayMode.fillScreen)
                    Text("Fit").tag(DisplayMode.fit)
                    Text("Stretch").tag(DisplayMode.stretch)
                    Text("Center").tag(DisplayMode.center)
                    Text("Tile").tag(DisplayMode.tile)
...
